Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages. There is also a sg3_utils man page.

Changelog for sg3_utils-1.43 [20171030] [svn: r727]
  - sg_bg_ctl: new Background control command (sbc4r08)
  - sg_write_atomic: new 16 and 32 byte cdbs (sbc4r04)
    - also can issue plain WRITE(16 or 32)
  - sg_senddiag: add --timeout=SEC option
  - sg_sanitize: add --timeout=SEC option
  - sg_format: add --timeout=SEC option
    - add --quick option to skip reconsideration time
  - sg_decode sense: add --cdb option
  - sg_ses: handle 2 bit EIIOE field in aes dpage
    - expand join handling of SAS connectors and others
    - expand join debug code
    - allow multiple --clear=, --get= and --set= options
    - allow individual index ranges (e.g. --index=3,5)
    - allow --index=IIA with -ee to enumerate only fields
      belonging to element type IIA
    - add 'offset_temp' and 'rqst_override' to temperature
      sensor element type
    - interpret '--join --page=aes' to only display join
      rows that have a corresponding AES dpage element
    - sync to ses4r01
  - sg_luns: resync with drafts (sam6r02+spc5r10)
    - remove undocumented test "W" format
    - accept and output on request "quad dashed" format
  - sg_logs: fix volume statistics lpage when subpage
    is zero (ssc5r02a); decode mount history log parameter
    - add --vendor=VP and '--pdt=DT' options
    - decode Requested recovery, TapeAlert response, and
      Service buffer information lpages for tape
    - add min+max 'mounted' temperature and rel. humidity
      fields to Environmental reporting lpage (spc5r10)
    - add last n Inquiry/Mode_page data changed log
      pages (spc5r17)
    - add zoned block device statistics lpage (zbc2r?,
      16-264r4)
    - fixup enumeration in power condition transition
      log page (from H. Reinecke, Suse)